# zkhn-rust-api

./: .gitignore  Cargo.toml  DATABASE_URL.fish  README.md  Secrets.toml  Shuttle.toml  run.sh  ta
.github/: dependabot.yml  settings.yml
api/: .env  Cargo.toml
api/src/: auth.rs  cors.rs  error.rs  lib.rs  main.rs  session.rs  sessions.rs  tests.rs  utils.rs
api/src/api/: comments.rs  items.rs  mod.rs  users.rs
api/src/auth/: auth_handlers.rs  auth_user.rs  backend.rs  credentials.rs  jank.rs  mod.rs  password.rs  test.rs  users.rs
api/src/auth/web/: app.rs  mod.rs
api/src/comments/: extractors.rs  mod.rs  payload.rs  routes.rs
api/src/routes/: mod.rs  openapi.rs
api/src/routes/comments/: mod.rs  payload.rs  response.rs  routes.rs
api/src/routes/items/: delete.rs  get.rs  mod.rs  payload.rs  post.rs  put.rs  response.rs
api/src/routes/users/: mod.rs  payload.rs  response.rs  responses.rs  test.rs
api/src/tests/: common.rs  mod.rs  test.rs  users.rs
api/src/user_votes/: payload.rs
api/src/users/: payload.rs
api/tests/: common.rs  test.rs
auth-bak/: auth_user.rs  credentials.rs  mod.rs  users.rs
db/: .env  Cargo.toml  diesel.toml
db/.sqlx/: query-076a4f5e7aca15985abb99734fa06f6f67822aef2db79e8f99376840253b3086.json  query-08cce122c8eb9b390e5411cc08d2e735de7230a596fa2f2ba472bed6a9b4a75c.json  query-0d96d391c806de87ca24a5e614c919835acf03630c0e0a8228c7800a00684aac.json  query-1175e51a98bc5bacd8c3a88dea99f05249225cd063b0e0707d8f5f46cf81f961.json  query-133999231759cd3ea7d6d9e0443035ef17aa7e5ff4d25f5a75a9dda780ac43c6.json  query-1360a354c1adba7897507ef65f6a7db78d093a23fcc6d2f4b2a4887af1a12d31.json  query-196869ca82a50b07623647d0fb544ac5bd022a7808b8c2d9a963a23ab540d655.json  query-1e45fd62a66bbc6fc5beb7b24621c1b1d34056428c3374651b998dbd30d136d0.json  query-1e9045f52c002a19b815351fee1c7ee7520478ff4f5886b4523fb0dc4df0e204.json  query-21f76692c3cc55020dccf525bc15ac14a11f00160c7d3e96ac960a8508b05fef.json  query-249ab5582279b55bf7bd2eda776801c3067ac9dad0384069eb91783a34131d1a.json  query-2f336f062ddd5a5cc11ff1621182aaf1a4011c2758e240ebf4f4a26f8f58b175.json  query-33c4cb3bb1675de38c7c438de08cff5a05f04c0a1a5a1703eaf975a216be6a75.json  query-37e3fc88cfe2445bd22703890eb05f21562f723360e502888348ee88b45d32dc.json  query-37ea15a554cf3a3bb4bc4c26db638e3f725ed975feaebf4848a44d79102790b2.json  query-38478e7f32d1c3f5ab935b06cfaa893e259273f4d337b78465b35a9732db7f51.json  query-384bfb4df637a6bda7fd464c313a7d441feea60ead2d99223ccde4bf829bf622.json  query-38eb782cd09ef5d5d950bda4391709e651166cbe66f5488babf6fb4266924df1.json  query-3c1693926cb3e25c39f6f0e28897f51a14534f6fd362c4d741dfeae71b6a3f01.json  query-3cf9aa0dc9d84b93d11c1559c3ec6e46e204375d87a466f0278cbd0b2f0db164.json  query-3ebd234e49fff7ccfb25527e72db05909253a27ea62188691734f82b271c8bc3.json  query-48a4a2e096b16bc29a7484645b99ec0870d6970ef2ed48abcdf34db754c7656d.json  query-4b271f20c85404d410d78a3f0dccc651bfe076886a95c30cc2239fb29f1c4bd2.json  query-4b4d0a9cb5cfde1ee75881a48c88c1ede76c6528e2ad6e86e9ed52742d46bdb8.json  query-4bac932418d1d958cb86c878114ff99c78cafcc169be085f8aab914e6ad6831d.json  query-4efcba3e1ed2be154e00f4f58be32069e1acb776c7b3008dc64bc3cc452b6d08.json  query-50473ef775799486f0beaa5f2a778ee3969fea05e23e6d5242235082102adf72.json  query-514b47bb64ebc3e11c8bfdfe94d01bf607c2e1154d4bbe64dcdb47cc105859bf.json  query-57ccac97e3d1c2dd386451a506aa9d8cc529ff9c9fa9c36032cb1084bac5a261.json  query-5dbffe45f73830dfd202ebcecf82f977f3051963e575f6095d38961f079bc1d6.json  query-5dfca058ae5f173fe60822b479a6b7f51089c247ec06e802fca7ebab1727035f.json  query-5e0bc410901c257a76ae2405fc7de9b88bf0faef3a4ffe5b928297aeb04cd3ba.json  query-5e5785023b5534ae83ce2ba93a50d0b08e307ea6bda0d4114d2a8bced58d12ee.json  query-5ebe5947ec23fafc0171070365183f70945dce5879453496b11fe2ff12c8c81e.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-6c1e46896cea195631b6c54e78bff51c0a9c6d899b1bc467119826213a7e9c63.json  query-6cf9108dfaf3073f5ea0a0e8f0f04cdacb7bb297f006481fd4788b56d670272a.json  query-721403b105f117e643b30b242054112dd5a58757e49ecfb70b5144daf6aa34d6.json  query-7307ed2e568e46edf6fcbd076b3591939a035e99ce093ede9b31ef875615b4d4.json  query-7581ae78eb757d6e92f790d6e2df6ac09d18dc13776aad7d4a558061d215eaf4.json  (+41 more)
db/backup-mig/: 20240301230842_comments.down.sql  20240301230910_items.sql  20240301230941_moderation_logs.down.sql  20240301231033_users.sql  20240301231117_user_favorites.down.sql  20240301231144_user_votes.down.sql  20240328165534_changes.up.sql
db/migrations/: 20240301230842_comments.sql  20240301230910_items.down.sql  20240301230910_items.sql  20240301230941_moderation_logs.sql  20240301231033_users.sql  20240301231055_user_hiddens.down.sql  20240301231055_user_hiddens.sql  20240301231117_user_favorites.sql  20240301231144_user_votes.sql  20240328172504_users.down.sql  20240328172504_users.up.sql  20240402185206_items.down.sql  20240402185206_items.up.sql  20240405221932_votes.down.sql  20240405221932_votes.up.sql  20240408051358_comments.down.sql  20240408051358_comments.up.sql  20240418184251_favorites.down.sql  20240418184251_favorites.up.sql
db/migrations/2024-02-20-234507_comments/: down.sql  up.sql
db/migrations/2024-02-21-000619_items/: up.sql
db/migrations/2024-02-21-223522_moderation_logs/: down.sql
db/migrations/2024-02-21-225917_users/: up.sql
db/migrations/2024-02-21-230706_user_hiddens/: down.sql  up.sql
db/migrations/2024-02-21-231709_user_votes/: down.sql
db/src/: comments.rs  error.rs  lib.rs  password.rs  schema.rs  tests.rs  types.rs  user_votes.rs  utils.rs
db/src/api/: comments.rs
db/src/models/: comment.rs  item.rs  mod.rs  moderation_log.rs  user.rs  user_favorite.rs  user_hidden.rs  user_vote.rs
db/src/queries/: comments.rs  hiddens.rs  items.rs  mod.rs  user_favorites.rs  user_hiddens.rs  user_votes.rs  users.rs
db/tests/: test.rs
server/: Cargo.toml  Secrets.dev.toml  Secrets.toml  Shuttle.toml
server/src/: cors.rs  error.rs  main.rs  tests.rs  utils.rs
server/tests/: integration.rs  integration_utils.rs
src/: error.rs  main.rs  (+3 more)
(+42 files in other folders)
