# authors    =["Thor Kampefner <thorck@pm.me>"]
# description="""zkhn api"""
# edition    ="2021"
# license    ="Apache2.0 OR MIT"
# name       ="zkhn-rust-api"
# repository ="https://github.com/thor314/zkhn-rust-api"
# version    ="0.1.0"

[workspace]
resolver = "2"
members = [
    "api",
    "db", 
    "server",
]
