[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""zkhn api"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="api"
repository ="https://github.com/thor314/zkhn-rust-api"
version    ="0.1.0"

[dependencies]
db = { path = "../db" }

ammonia="3.3.0"
anyhow="1.0"
axum={ version="0.7.3", features=["macros"] }
chrono={ version="0.4.34", features=["serde"] }
diesel-async={ version="0.4.1", features=["postgres", "deadpool"] }
diesel={ version="2.1.4", features=["postgres", "uuid", "chrono"] }
# diesel-derive-enum={ version="2.1.0", features=["postgres"] }
regex="1.10.3"
scrypt = "0.11.0"
# shuttle-axum="0.39.0"
# shuttle-runtime={ version="0.39", default-features=false }
# shuttle-secrets="0.39.0"
# shuttle-diesel-async={ git="https://github.com/aumetra/shuttle-diesel-async", features=[
#   "deadpool",
# ] }
# shuttle-shared-db={ version="0.39.0", features=["postgres"] }
serde={ version="1.0.196", features=["derive"] }
serde_json="1.0.113"
tracing="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio={ version="1", features=["full"] }
thiserror="1.0"
uuid={ version="1.7.0", features=["serde", "v4"] }
url="2.5.0"
axum-login = "0.13.1"
tower = "0.4.13"
tower-sessions = "0.10.4"
tower-sessions-sqlx-store = { version = "0.10.0", features = ["postgres"] }
# futures = "0.3.30"
# axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
# tower-http = { version = "0.5.1", features = ["fs"] }

# [dev-dependencies]
# rstest           ="0.18"                                 # testing convenience proc-macros
# arbitrary        ={ version="1.1", features=["derive"] } # see quickcheck
# quickcheck       ="1.0"                                  # lowkey proptest suite
# quickcheck_macros="1"                                    # derive 
