[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""zkhn api"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="api"
repository ="https://github.com/thor314/zkhn-rust-api"
version    ="0.1.0"

[dependencies]
db = { path = "../db" }

ammonia="4.0.0"
anyhow="1.0"
axum={ version="0.7.3", features=["macros"] }
chrono={ version="0.4.34", features=["serde"] }
regex="1.10.3"
scrypt = "0.11.0"
serde={ version="1.0.196", features=["derive"] }
serde_json="1.0.113"
tracing="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio={ version="1", features=["full"] }
thiserror="1.0"
uuid={ version="1.7.0", features=["serde", "v4"] }
url="2.5.0"
axum-login = "0.15.0"
tower = "0.4.13"
tower-sessions = "0.12.0"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["postgres"] }
axum-analytics = "1.1.3"
axum-derive-error = "0.1.0"

futures = "0.3.30"
garde = { version = "0.18.0", features = ["derive", "email", "serde"] }
oauth2 = "4.4.2"
reqwest = { version = "0.12.0", features = ["json"] }
rand = "0.8.5"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipauto = "0.1.10"
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }

[dev-dependencies]
axum-test = "14.5.0"
http-body-util = "0.1.1"
rstest = "0.18.2"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.3", features = ["postgres", "tls-rustls", "chrono", "uuid", "runtime-tokio"] }

# rstest           ="0.18"                                 # testing convenience proc-macros
# arbitrary        ={ version="1.1", features=["derive"] } # see quickcheck
# quickcheck       ="1.0"                                  # lowkey proptest suite
# quickcheck_macros="1"                                    # derive 

###################
# DEPRECATION LOG #
###################
# axum_garde = "0.18.0" # deprecation(2024-03-27): passes bad error messages and no ext for utoipa
