[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""zkhn api"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="db"
repository ="https://github.com/thor314/zkhn-rust-api"
version    ="0.1.0"

[dependencies]
ammonia="3.3.0"
anyhow="1.0"
axum={ version="0.7.3", features=["macros"] }
chrono={ version="0.4.34", features=["serde"] }
deadpool="0.10.0"
regex = "1.10.3"
scrypt = "0.11.0"
shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] }
serde={ version="1.0.196", features=["derive"] }
serde_json="1.0.113"
tracing="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio={ version="1", features=["full"] }
thiserror="1.0"
url="2.5.0"
sqlx = { version = "0.7.3", features = ["postgres", "tls-rustls", "chrono", "uuid"] }
validator = { version = "0.16.1", features = ["derive"] }
once_cell = "1.19.0"

# futures = "0.3.30"

[dev-dependencies]
rstest           ="0.18"                                 # testing convenience proc-macros
arbitrary        ={ version="1.1", features=["derive"] } # see quickcheck
quickcheck       ="1.0"                                  # lowkey proptest suite
quickcheck_macros="1"                                    # derive 
