[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""zkhn api"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="db"
repository ="https://github.com/thor314/zkhn-rust-api"
version    ="0.1.0"

[dependencies]
ammonia="4.0.0"
anyhow="1.0"
axum={ version="0.7.3", features=["macros"] }
chrono={ version="0.4.34", features=["serde"] }
once_cell = "1.19.0"
regex = "1.10.3"
serde={ version="1.0.196", features=["derive"] }
serde_json="1.0.113"
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "uuid", "runtime-tokio"] }
tracing="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio={ version="1", features=["full"] }
thiserror="1.0"
url="2.5.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
rayon = "1.9.0"
futures = "0.3.30"
garde = { version = "0.18.0", features = ["email", "derive", "serde", "url"] }
utoipa = "4.2.0"
argon2 = "0.5.3"

[dev-dependencies]
rstest           ="0.18"                                 # testing convenience proc-macros
arbitrary        ={ version="1.1", features=["derive"] } # see quickcheck
quickcheck       ="1.0"                                  # lowkey proptest suite
quickcheck_macros="1"                                    # derive 
