[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
db  = { path = "../db" }

anyhow="1.0"
axum={ version="0.7.3", features=["macros"] }
shuttle-axum="0.39.0"
shuttle-runtime={ version="0.39", default-features=false }
shuttle-secrets="0.39.0"
shuttle-shared-db={ version="0.39.0", features=["postgres"] }
tracing="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio={ version="1", features=["full"] }
thiserror="1.0"
sqlx = { version = "0.7.3", features = ["postgres", "tls-rustls"] }

[dev-dependencies]
rstest           ="0.18"                                 # testing convenience proc-macros
arbitrary        ={ version="1.1", features=["derive"] } # see quickcheck
quickcheck       ="1.0"                                  # lowkey proptest suite
quickcheck_macros="1"                                    # derive 

# [[test]]
# name="integration"
# path="tests/tests.rs"