[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
db  = { path = "../db" }

anyhow="1.0"
axum={ version="0.7.3", features=["macros"] }
shuttle-axum="0.40.0"
shuttle-runtime={ version="0.40", default-features=false }
shuttle-secrets="0.40.0"
shuttle-shared-db = { version = "0.40.0", features = ["postgres", "sqlx"] }
tracing="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio={ version="1", features=["full"] }
thiserror="1.0"
sqlx = { version = "0.7.3", features = ["postgres", "tls-rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
tower-sessions = "0.11.0"
tower-sessions-sqlx-store = { version = "0.10.0", features = ["postgres"] }
time = "0.3.34"

[dev-dependencies]
rstest           ="0.18"                                 # testing convenience proc-macros
arbitrary        ={ version="1.1", features=["derive"] } # see quickcheck
quickcheck       ="1.0"                                  # lowkey proptest suite
quickcheck_macros="1"                                    # derive 

# unoptimized macro compilation for faster dev builds
[profile.dev.package.sqlx-macros]
opt-level = 3