[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
db  = { path = "../db" }

anyhow="1.0"
axum={ version="0.7.3", features=["macros"] }
shuttle-axum="0.43.0"
shuttle-runtime={ version="0.45", default-features=false }
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx"] }
tracing="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio={ version="1", features=["full"] }
thiserror="1.0"
sqlx = { version = "0.7.3", features = ["postgres", "tls-rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
tower-sessions = "0.12.0"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["postgres"] }
time = "0.3.34"
reqwest = { version = "0.12.2", features = ["cookies"] }
tower-http = { version = "0.5.2", features = ["cors"] }

[dev-dependencies]
rstest           ="0.19"                                 # testing convenience proc-macros
arbitrary        ={ version="1.1", features=["derive"] } # see quickcheck
quickcheck       ="1.0"                                  # lowkey proptest suite
quickcheck_macros="1"                                    # derive 
reqwest = "0.12.2"
serial_test = "3.0.0"
uuid = { version = "1.8.0", features = ["v4"] }
